fix: github mark path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="title">kopio.js</div>
-    <a class="github-link" href="https://github.com/Banttu/kopio.js" target="_blank" rel="noopener noreferrer"><img src="/images/github_mark.svg" alt="GitHub mark"></a>
+    <a class="github-link" href="https://github.com/Banttu/kopio.js" target="_blank" rel="noopener noreferrer"><img src="./images/github_mark.svg" alt="GitHub mark"></a>
   </header>
   <section>
     <div class="description">Zero-dependency solution for copying text. Light as a croissant 🥐</div>
